# Hexis

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  HEXIS_EXPERIENCE_BAR.md  MISSION.md  MISSION_PROGRESS.md  README.md  docker-compose.yml  pyproject.toml  why_i_suck_and_how_to_fix_it.md
apps/: cli_auth.py  cli_chat.py  cli_docs.py  cli_exchange.py  cli_prompts.py  hexis_api.py  hexis_cli.py  hexis_init.py  hexis_mcp_server.py
channels/: __init__.py  base.py  commands.py  conversation.py  discord_adapter.py  imessage_adapter.py  manager.py  media.py  outbox.py  presentation.py  signal_adapter.py  slack_adapter.py  telegram_adapter.py  whatsapp_adapter.py
characters/: samantha.json
core/: agent_api.py  agent_loop.py  backup_restore.py  capability_maturity.py  cli_api.py  cognitive_memory_api.py  config.py  consent.py  digest.py  gateway.py  hmx_files.py  init_api.py  integration_reliability.py  llm.py  llm_config.py  memory_exchange.py  memory_repo.py  migrations.py  protected_replacement.py  rabbitmq_bridge.py  state.py  trust_anchors.py  usage.py
db/: 00_tables.sql  01_indices.sql  03_functions_helpers.sql  04_functions_core.sql  05_functions_provenance_trust.sql  06_functions_graph_helpers.sql  07_functions_heartbeat.sql  08_functions_goals.sql  09_functions_context.sql  10_functions_initialization.sql  11_functions_core_heartbeat.sql  13_functions_emotional_state.sql  15_functions_graph_enhancements.sql  17_functions_subconscious_observations.sql  18_functions_tip_of_tongue.sql  19_functions_scheduling.sql  21_functions_reconsolidation.sql  22_tables_channels.sql  28_functions_dopamine.sql  28a_tables_gateway.sql  29_tables_api_usage.sql  31_functions_recmem.sql  32_functions_db_brain.sql  32_tables_runtime.sql  33_functions_runtime.sql  34_functions_chat_channel.sql  35_functions_recmem_ops.sql  36_functions_tool_runtime.sql  37_functions_agent_runtime.sql  38_functions_db_native_tools.sql  39_functions_prompt_render.sql  40_seed_prompt_modules.sql  41_functions_ingest.sql  42_functions_outbox.sql  43_functions_heartbeat_agentic.sql  44_functions_memory_edges.sql  45_tables_journal.sql  46_functions_journal.sql  47_functions_retention.sql  48_functions_memory_exchange.sql  (+45 more)
docs/: faq.md  handoff.md  hmx-acceptance.md  index.md  memory_retention_design.md  nav.md  optimize.md  portable-brain-audit.md
evals/: __init__.py
hexis-ui/: next.config.ts  package.json  vitest.config.ts
ops/: Dockerfile.channels  Dockerfile.worker  docker-compose.runtime.yml
plans/: RecMem.md  db_pushdown.md  hmx.md  python-to-postgres-inventory.md  python-to-postgres.md
plugins/: __init__.py  base.py  (+1 more)
(+737 files in other folders)
